<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    tools:context=".ShowMoviesActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview1"
            android:text="@string/movies_recommended_for_you"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/hangover"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/hang_over_n_ncomedy"
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/curseofthenun"
                android:contentDescription="@string/todo2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/curse_the_nun_n_nthriller"
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/conjuring3"
                android:contentDescription="@string/todo3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/conjuring_3_n_nhorror"
                android:textSize="20sp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/skylines"
                android:contentDescription="@string/todo4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/sky_lines_n_naction"
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/titanic"
                android:contentDescription="@string/todo5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/titanic_n_nromance"
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/zodiacmysery"
                android:contentDescription="@string/todo6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/zodiac_n_nmysery"
                android:textSize="20sp"
                />


        </LinearLayout>

    </LinearLayout>
</ScrollView>