<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".recommendedmovies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:text="@string/movies_recommended_for_you"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingVertical="10dp"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image1"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/textview1"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image2"
                android:contentDescription="@string/todo2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:id="@+id/textview2"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image3"
                android:contentDescription="@string/todo3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:id="@+id/textview3"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"

                android:id="@+id/image4"
                android:contentDescription="@string/todo4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:id="@+id/textview4"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image5"
                android:contentDescription="@string/todo5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:id="@+id/textview5"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image6"
                android:contentDescription="@string/todo6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:id="@+id/textview6"
                android:text=""
                android:textSize="20sp"
                />


        </LinearLayout>

    </LinearLayout>

</ScrollView>